Bug 609671 - custom Android linker prevents system libraries from being dlopen'd, r=taras a=blocking-fennec